# kodi-repository

./: .gitignore  README.md  addons.xml  addons.xml.md5  index.html
.claude/: settings.local.json
.github/scripts/: build_repo.py
.github/workflows/: kodi-repo.yml
plugin.audio.ibroadcast/: CHANGELOG.md  README.md  addon.xml  default.py  index.html
plugin.audio.ibroadcast/lib/: ibroadcast.py  ibroadcast_oauth.py  metadata.py
plugin.audio.ibroadcast/resources/: settings.xml
plugin.audio.ibroadcast/resources/language/resource.language.en_gb/: strings.po
plugin.repository.chivancom/: README.md  addon.xml
plugin.repository.ibroadcast/: addon.xml  index.html
plugin.visualization.albumart/: README.md  addon.xml  build.sh
plugin.visualization.albumart/resources/: settings.xml
plugin.visualization.albumart/resources/language/resource.language.en_gb/: strings.po
plugin.visualization.albumart/src/: main.cpp
visualization.ibroadcast.albumart/: CMakeLists.txt  addon.xml
visualization.ibroadcast.albumart/build_android/: CMakeCache.txt
zips/plugin.audio.ibroadcast/: index.html
zips/plugin.visualization.albumart/: index.html
